# SuperSpec

./: .gitignore  AGENTS.md  CHANGELOG.md  MANIFEST.in  README.md  cli.md  pyproject.toml  state.md
.codex/: config.toml
agents/: code-reviewer.toml
docs/: cli.md  state.md
openspec/changes/demo-agent-loop/: plan.json
script/: send_email_smtp.py
skills/superspec-agent-driven-loop/: SKILL.md
skills/superspec-run-change-to-done/: SKILL.md
src/config/: config.toml
src/superspec/: __init__.py  cli.py
superspec/: __init__.py  cli.py
superspec.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
superspec/actions/: __init__.py  action_registry.py  openspec_actions.py
superspec/engine/: __init__.py  constants.py  context.py  errors.py  orchestrator.py  plan_loader.py  protocol.py  scheme_loader.py  state_store.py  validator.py  workflow_loader.py
superspec/runners/: __init__.py  script_runner.py  skill_runner.py
superspec/schemas/: plan.schema.json  plan.scheme.schema.json  protocol.contracts.json  workflow.schema.json
superspec/schemes/: sdd.scheme.json
superspec/script/: worktree_create.py
superspec/scripts/: worktree_create.py
superspec/templates/: plan.base.json  plan.template.json
superspec/tests/: test_integration.py  test_plan_lifecycle.py
tests/: test_change_lifecycle.py  test_change_new.py  test_cli_init.py  test_git_commit.py  test_git_worktree_cli.py  test_integration.py  test_plan_lifecycle.py  test_progress_summary.py  test_sdd_cli.py  test_workflow_fork.py  test_worktree_create_script.py
(+210 files in other folders)
