[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "superspec"
version = "0.5.0"
description = "SuperSpec protocol-driven orchestrator"
requires-python = ">=3.10"
dependencies = ["jsonschema>=4.0"]

[project.scripts]
superspec = "superspec.cli:main"
