[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "superspec"
version = "1.2.0"
description = "SuperSpec protocol-driven orchestrator"
requires-python = ">=3.10"
dependencies = ["jsonschema>=4.0"]

[project.scripts]
superspec = "superspec.cli:main"

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["superspec*"]

[tool.setuptools.package-data]
superspec = [
  "schemas/*.json",
  "schemas/templates/*.json",
  "schemas/workflows/*.json",
  "skills/*/SKILL.md",
  "agents/*.toml",
  "config/*.toml",
]
